before testing react-backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-server.port=9090
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.profiles.active=dev
+spring.application.name=Profiles
+# ----------------------------------------
+# CORE PROPERTIES
+# ----------------------------------------
+debug=false
+trace=false
+app.message=This is the primary Application Property for ${spring.application.name} 
 
-spring.datasource.initialization-mode=always
-spring.datasource.schema=classpath:/schema.sql
-spring.datasource.continue-on-error=true
