--- a/src/main/resources/application-it.properties
+++ b/src/main/resources/application-it.properties
@@ -8,4 +8,5 @@ spring.jpa.show-sql=true
 spring.data.rest.base-path=/api
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=tru
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.h2.console.enabled=true
