--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,4 @@ spring.application.name=Profiles
 # ----------------------------------------
 debug=false
 trace=false
-app.message=This is the primary Application Property for ${spring.application.name} 
-
+spring.h2.console.enabled=true
